cmake_minimum_required(VERSION 3.19)
project(coder_cplus_toturial)

set(CMAKE_CXX_STANDARD 14)

add_executable(coder_cplus_toturial main.cpp)
add_executable(chapter02_01 chapter02/chapter02-01.cpp)
add_executable(chapter02_02 chapter02/chapter02-02.cpp)
add_executable(chapter02_03 chapter02/chapter02-03.cpp)
add_executable(chapter02_04 chapter02/chapter02-04.cpp)
add_executable(chapter02_05 chapter02/chapter02-05.cpp)
add_executable(chapter02_06 chapter02/chapter02-06.cpp)
add_executable(chapter02_07 chapter02/chapter02-07.cpp)
