cmake_minimum_required(VERSION 3.19)
project(coder_cplus_toturial)

set(CMAKE_CXX_STANDARD 14)

add_executable(chapter02_01 chapter02/chapter02-01.cpp)
add_executable(chapter02_02 chapter02/chapter02-02.cpp)
add_executable(chapter02_03 chapter02/chapter02-03.cpp)
add_executable(chapter02_04 chapter02/chapter02-04.cpp)
add_executable(chapter02_05 chapter02/chapter02-05.cpp)
add_executable(chapter02_06 chapter02/chapter02-06.cpp)
add_executable(chapter02_07 chapter02/chapter02-07.cpp)

add_executable(chapter03_01 chapter03/chapter03-01.cpp)
add_executable(chapter03_02 chapter03/chapter03-02.cpp)
add_executable(chapter03_03 chapter03/chapter03-03.cpp)
add_executable(chapter03_04 chapter03/chapter03-04.cpp)
add_executable(chapter03_05 chapter03/chapter03-05.cpp)
add_executable(chapter03_06 chapter03/chapter03-06.cpp)
add_executable(chapter03_07 chapter03/chapter03-07.cpp)

add_executable(chapter04_01 chapter04/chapter04-01.cpp)
add_executable(chapter04_02 chapter04/chapter04-02.cpp)
add_executable(chapter04_03 chapter04/chapter04-03.cpp)
add_executable(chapter04_04 chapter04/chapter04-04.cpp)
add_executable(chapter04_05 chapter04/chapter04-05.cpp)
add_executable(chapter04_06 chapter04/chapter04-06.cpp)
add_executable(chapter04_07 chapter04/chapter04-07.cpp)
add_executable(chapter04_08 chapter04/chapter04-08.cpp)
add_executable(chapter04_09 chapter04/chapter04-09.cpp)
add_executable(chapter04_10 chapter04/chapter04-10.cpp)

add_executable(chapter05_01 chapter05/chapter05-01.cpp)
add_executable(chapter05_02 chapter05/chapter05-02.cpp)
add_executable(chapter05_03 chapter05/chapter05-03.cpp)
add_executable(chapter05_04 chapter05/chapter05-04.cpp)
add_executable(chapter05_05 chapter05/chapter05-05.cpp)
add_executable(chapter05_06 chapter05/chapter05-06.cpp)
add_executable(chapter05_07 chapter05/chapter05-07.cpp)
add_executable(chapter05_08 chapter05/chapter05-08.cpp)
add_executable(chapter05_09 chapter05/chapter05-09.cpp)
add_executable(chapter05_10 chapter05/chapter05-10.cpp)

add_executable(chapter06_01 chapter06/chapter06-01.cpp)
add_executable(chapter06_02 chapter06/chapter06-02.cpp)
add_executable(chapter06_03 chapter06/chapter06-03.cpp)
add_executable(chapter06_04 chapter06/chapter06-04.cpp)
add_executable(chapter06_05 chapter06/chapter06-05.cpp)
add_executable(chapter06_06 chapter06/chapter06-06.cpp)
add_executable(chapter06_07 chapter06/chapter06-07.cpp)
add_executable(chapter06_08 chapter06/chapter06-08.cpp)
add_executable(chapter06_09 chapter06/chapter06-09.cpp)

add_executable(chapter07_01 chapter07/chapter07-01.cpp)
add_executable(chapter07_02 chapter07/chapter07-02.cpp)
add_executable(chapter07_03 chapter07/chapter07-03.cpp)
add_executable(chapter07_04 chapter07/chapter07-04.cpp)
add_executable(chapter07_05 chapter07/chapter07-05.cpp)
add_executable(chapter07_06 chapter07/chapter07-06.cpp)
add_executable(chapter07_07 chapter07/chapter07-07.cpp)
add_executable(chapter07_08 chapter07/chapter07-08.cpp)
add_executable(chapter07_09 chapter07/chapter07-09.cpp)
add_executable(chapter07_10 chapter07/chapter07-10.cpp)

add_executable(chapter08_01 chapter08/chapter08-01.cpp)
add_executable(chapter08_02 chapter08/chapter08-02.cpp)
add_executable(chapter08_03 chapter08/chapter08-03.cpp)
add_executable(chapter08_04 chapter08/chapter08-04.cpp)
add_executable(chapter08_05 chapter08/chapter08-05.cpp)
add_executable(chapter08_06 chapter08/chapter08-06.cpp)
add_executable(chapter08_07 chapter08/chapter08-07.cpp)

add_executable(chapter09_01 chapter09/chapter09-01.cpp)
add_executable(chapter09_02 chapter09/chapter09-02.cpp)
add_executable(chapter09_03 chapter09/chapter09-03.cpp)
add_executable(chapter09_04 chapter09/chapter09-04.cpp)

add_executable(chapter10_01 chapter10/chapter10-01.cpp)
add_executable(chapter10_02 chapter10/chapter10-02.cpp)
add_executable(chapter10_03 chapter10/chapter10-03.cpp)
add_executable(chapter10_04 chapter10/chapter10-04.cpp)
add_executable(chapter10_05 chapter10/chapter10-05.cpp)
add_executable(chapter10_06 chapter10/chapter10-06.cpp)
add_executable(chapter10_07 chapter10/chapter10-07.cpp)
add_executable(chapter10_08 chapter10/chapter10-08.cpp)

add_executable(chapter11_01 chapter11/chapter11-01.cpp)

add_executable(chapter12_01 chapter12/chapter12-01.cpp)

add_executable(chapter13_01 chapter13/chapter13-01.cpp)

add_executable(chapter14_01 chapter14/chapter14-01.cpp)

add_executable(chapter15_01 chapter15/chapter15-01.cpp)

add_executable(chapter16_01 chapter16/chapter16-01.cpp)

add_executable(chapter17_01 chapter17/chapter17-01.cpp)

add_executable(chapter18_01 chapter18/chapter18-01.cpp)


add_executable(vector-define stl/vector-define.cpp)
add_executable(vector-add stl/vector-add.cpp)
add_executable(vector-assign stl/vector-assign.cpp)
add_executable(vector-remove stl/vector-remove.cpp)
add_executable(vector-get stl/vector-get.cpp)
add_executable(vector-traversing stl/vector-traversing.cpp)
add_executable(vector-other stl/vector-other.cpp)

add_executable(forward_list stl/forward_list.cpp)
add_executable(list stl/list.cpp)